deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotbintask
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http-api
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http-frontend
  selector:
    app: dotbintask
